<?xml version="1.0"?>
<package format="3">
  <name>control_pkg</name>
  <version>0.0.0</version>
  <description>C++ Controller Node (Pure Pursuit Skeleton)</description>
  <maintainer email="sugosugo222@gmail.com">andantinow</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>           <depend>geometry_msgs</depend>      <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
