<?xml version="1.0"?>
<package format="3">
  <name>localization_pkg</name>
  <version>0.0.0</version>
  <description>Localization package for F1Tenth project, handling odometry and sensor data.</description>
  <maintainer email="sugosugo222@gmail.com">andantinow</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>           <depend>geometry_msgs</depend>      <depend>sensor_msgs</depend>        <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
