<?xml version="1.0"?>
<package format="3">
  <name>localization_pkg</name>
  <version>0.0.2</version>
  <description>Adaptive estimator (Dual EKF/MHE scaffold) for racing stack</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>vehicle_model_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
