<?xml version="1.0"?>
<package format="3">
  <name>planning_pkg</name>
  <version>0.0.0</version>
  <description>C++ Path Planning Node (Fixed Path Publisher)</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>      <depend>nav_msgs</depend>           <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
