<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vehicle_model_msgs</name>
  <version>0.0.0</version>
  <description>Custom messages for adaptive vehicle state and parameter estimation.</description>
  <maintainer email="misys@todo.todo">misys</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <depend>rosidl_default_runtime</depend>

  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group> 
  </export>
</package>
